force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Available_Amount__c</fullName>
    <description>This field is optional and represents the amount available to borrow on the debt.</description>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>