force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Date_Opened__c</fullName>
    <description>The system populates this optional date field with the date the account was opened.</description>
    <inlineHelpText>The system populates this optional date field with the date the account was opened.</inlineHelpText>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>