force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Debt_Schedule__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Debt_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This optional field represents the Debt Schedule this debt is tied to.</description>
    <label>Debt Schedule</label>
    <referenceTo>LLC_BI__Debt_Schedule__c</referenceTo>
    <relationshipLabel>Debts</relationshipLabel>
    <relationshipName>Debts</relationshipName>
    <type>Lookup</type>
</CustomField>