force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Debt_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Debt_Type__c</fullName>
    <description>This field is required and denotes the type of debt.</description>
    <label>Debt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Auto/Lease Payments</fullName>
            </value>
            <value>
                <fullName>Monthly Child Support Payments</fullName>
            </value>
            <value>
                <fullName>Monthly Credit Card Payments</fullName>
            </value>
            <value>
                <fullName>Monthly Student Loan Payments</fullName>
            </value>
            <value>
                <fullName>Other Monthly Installment</fullName>
            </value>
            <value>
                <fullName>Proposed Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>