force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Exclude__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines if this debt is excluded from total debt calculations.</description>
    <label>Exclude</label>
    <type>Checkbox</type>
</CustomField>