force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Internal_Debt__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Internal_Debt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the Loan Id, which is used to populate the debt fields at a point in time.</description>
    <label>Internal Debt</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Internal Debts</relationshipLabel>
    <relationshipName>Internal_Debts</relationshipName>
    <type>Lookup</type>
</CustomField>