force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maturity_Date__c</fullName>
    <description>This field is optional and represents the date on which the debt matures.</description>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>