force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__New_Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__New_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is true if the debt is for an Offer or if it came from a Credit Report</description>
    <label>New Loan</label>
    <type>Checkbox</type>
</CustomField>