force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Non_Escrowed_Property_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Non_Escrowed_Property_Cost_Type__c</fullName>
    <description>Users populate this optional multi-select picklist field to indicate the type(s) of
        non-escrowed property costs associated with the debt record. By default, it is blank.</description>
    <inlineHelpText>Select the type(s) of non-escrowed property costs.</inlineHelpText>
    <label>Non-Escrowed Property Cost Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Homeowners Insurance</fullName>
            </value>
            <value>
                <fullName>Flood Insurance</fullName>
            </value>
            <value>
                <fullName>Wind and Hail</fullName>
            </value>
            <value>
                <fullName>County Property Taxes</fullName>
            </value>
            <value>
                <fullName>City Property Taxes</fullName>
            </value>
            <value>
                <fullName>Condo Association Dues</fullName>
            </value>
            <value>
                <fullName>Condo Association Special Assessment</fullName>
            </value>
            <value>
                <fullName>Coop Association Dues</fullName>
            </value>
            <value>
                <fullName>Coop Association Special Assessment</fullName>
            </value>
            <value>
                <fullName>Ground Rent</fullName>
            </value>
            <value>
                <fullName>Homeowners Association Dues</fullName>
            </value>
            <value>
                <fullName>Homeowners Association Special Assessment</fullName>
            </value>
            <value>
                <fullName>Leasehold Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>