force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Payoff_With_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Payoff_With_Proceeds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user manually selects this field to indicate the loan proceeds are used to pay off the debt. By default, it is unchecked.</description>
    <inlineHelpText>Indicate if the loan proceeds are used to pay off the debt.</inlineHelpText>
    <label>Payoff with Proceeds</label>
    <type>Checkbox</type>
</CustomField>