force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Principal_Balance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Principal_Balance__c</fullName>
    <description>This field is optional and represents the amount of principal remaining on the debt.</description>
    <label>Principal Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>