force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Reported_Date__c</fullName>
    <description>The system populates this optional field to indicate the date the creditor last reported the debt to the credit bureau.</description>
    <label>Reported Date</label>
    <type>Date</type>
</CustomField>