force-app/main/default/objects/LLC_BI__Debt__c/fields/LLC_BI__Source_Debt__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source_Debt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this is a cloned debt, this field is populated with its source.</description>
    <label>Source Debt</label>
    <referenceTo>LLC_BI__Debt__c</referenceTo>
    <relationshipLabel>Cloned Debts</relationshipLabel>
    <relationshipName>Cloned_Debts</relationshipName>
    <type>Lookup</type>
</CustomField>